# fastnanquantile

./: .flake8  .gitignore  LICENSE  README.md  environment-dev.yml  pyproject.toml
.github/workflows/: pypi-release.yml  tests.yml
examples/: example.ipynb  example_xarray.ipynb
src/fastnanquantile/: __init__.py  fastnanquantile.py  xrcompat.py
tests/: test_fastnanquantile.py  test_xr.py  test_xrcompat.py
